--- a/style.css
+++ b/style.css
@@ -9,8 +9,12 @@
     height: 200px;
     width: 200px;
     border: 5px solid black;
+    background-color: white;
 }
 
-.gridbox :hover{
-    background-color: lightgreen;
+.gridbox-hover{
+    display: inline-block;
+    height: 200px;
+    width: 200px;
+    border: 5px solid lightgreen;
 }
